fix: hide scrollbar

--- a/src/assets/globals.css
+++ b/src/assets/globals.css
@@ -2,7 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  /* Hide scrollbar */
-  overflow-y: hidden;
+html {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+::-webkit-scrollbar {
+  width: 0; /* Remove scrollbar space */
+  background: transparent; /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+  background: #ff0000;
 }
